app/assets/stylesheets/contacts.css.scss
$bulgarian-green: #00966E;
$bulgarian-red: #D62612;
$dark-grey: #333;

div.contact-profile {
  h1 {
    font-size: 20px;
    margin-bottom: 10px;
  }

  .picture {
    width: 200px;
    float: left;
  }

  .basic-info {
    width: 580px;
    float: right;
  }

  .options {
    width: 100%;
    text-align: right;
  }

  p {
    margin-bottom: 10px;
  }
}

.field {
  margin-bottom: 10px;

  label {
    padding-bottom: 5px;
  }

  input[type="file"] {
    line-height: 25px;
  }
}

.actions {
  border-top: 1px solid $bulgarian-red;
  padding-top: 10px;
  width: 100%;
}

a.contact-row {
  display: block;
  font-size: 20px;
  text-decoration: none;
  width: 100%;
  border-bottom: 1px solid $bulgarian-red;
  padding: 5px;

  .name {
    padding-left: 10px;
    line-height: 50px;
    vertical-align: center;
    float: left;
  }

  .picture {
    height: 50px;
    float: left;
  }

  &:hover {
    color: $dark-grey;
    background-color: lighten($bulgarian-green, 60%);
  }
}

